# wl-paste-cpp

./: .gitignore  LICENSE  README.md  flake.nix  meson.build
src/: Offer.h  WaylandClipboard.cpp  WaylandClipboard.h  WaylandConnection.cpp  WaylandConnection.h  base64.h  main.cpp  utils.cpp  utils.h
src/watcher/: Offer.cpp  WaylandClipboard.cpp  WaylandClipboard.h  base64.h
subprojects/common/: ClipboardHistory.cpp  ClipboardHistory.h  PosixIO.cpp  PosixIO.h  StringUtils.cpp  StringUtils.h  meson.build
subprojects/copier/: ClipboardCopier.cpp  ClipboardCopier.h  main.cpp  meson.build
subprojects/watcher/: Offer.cpp  Offer.h  WaylandClipboard.cpp  WaylandClipboard.h  WaylandConnection.cpp  WaylandConnection.h  main.cpp  meson.build
tests/: history_io_test.cpp
